--- a/Sketches.html
+++ b/Sketches.html
@@ -31,9 +31,9 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body class="u-body"><header class="u-clearfix u-custom-color-3 u-header u-sticky u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xl u-header" id="header"><div class="u-black u-container-style u-expanded-width u-group u-opacity u-opacity-55 u-group-1" data-href="Victoria-Theint.html">
+  <body class="u-body"><header class="u-clearfix u-custom-color-3 u-header u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xl u-header" id="header"><div class="u-black u-container-style u-expanded-width u-group u-opacity u-opacity-55 u-group-1" data-href="Victoria-Theint.html">
         <div class="u-container-layout u-valign-bottom u-container-layout-1">
-          <h3 class="u-align-center-xs u-align-right-lg u-align-right-md u-align-right-sm u-align-right-xl u-custom-font u-headline u-text u-text-white u-text-1">
+          <h3 class="u-align-center-xs u-align-right-lg u-align-right-md u-align-right-sm u-align-right-xl u-custom-font u-headline u-text u-text-1">
             <a href="/">VICTORIA THEINT</a>
           </h3>
         </div>
@@ -57,7 +57,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="#Bio">My Journey</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-7 u-text-hover-custom-color-1 u-text-palette-3-light-1" style="padding: 10px 20px;">CONTACT</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-7 u-text-hover-custom-color-1 u-text-palette-3-light-1" href="#contact" style="padding: 10px 20px;">CONTACT</a>
 </li></ul>
         </div>
         <div class="u-custom-menu u-nav-container-collapse">
@@ -74,7 +74,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#Bio">My Journey</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" style="padding: 10px 20px;">CONTACT</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#contact" style="padding: 10px 20px;">CONTACT</a>
 </li></ul>
           </div>
           <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
