--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
         <div class="u-custom-menu u-nav-container">
           <ul class="u-custom-font u-nav u-text-palette-3-light-1 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-7 u-text-hover-custom-color-1 u-text-palette-3-light-1" href="#Home" style="padding: 10px 20px;">HOME</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-7 u-text-hover-custom-color-1 u-text-palette-3-light-1" href="#Gallery" style="padding: 10px 20px;">WORKS</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="#carousel_74da">Nyaung Yan</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-7 u-text-hover-custom-color-1 u-text-palette-3-light-1" href="#Gallery" style="padding: 10px 20px;">WORKS</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="#sec-a425">Nyaung Yan</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="#carousel_19e8">Konbaung</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="#Company">Company Art</a>
 </li></ul>
@@ -107,7 +107,7 @@
           <div class="u-align-center u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
             <div class="u-menu-close"></div>
             <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#Home" style="padding: 10px 20px;">HOME</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#Gallery" style="padding: 10px 20px;">WORKS</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-5"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#carousel_74da">Nyaung Yan</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#Gallery" style="padding: 10px 20px;">WORKS</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-5"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#sec-a425">Nyaung Yan</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#carousel_19e8">Konbaung</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#Company">Company Art</a>
 </li></ul>
@@ -335,7 +335,7 @@
         <li data-u-target="#carousel_74da" data-u-slide-to="0" class="u-grey-30"></li>
       </ol>
       <div class="u-carousel-inner" role="listbox">
-        <div class="u-active u-carousel-item u-clearfix u-image u-lightbox u-parallax u-section-10-1" data-image-width="2700" data-image-height="1300">
+        <div class="skrollable u-active u-carousel-item u-clearfix u-image u-lightbox u-parallax u-section-10-1" data-image-width="2700" data-image-height="1300">
           <div class="u-clearfix u-sheet u-sheet-1"></div>
         </div>
       </div>
@@ -508,7 +508,7 @@
         <p class="u-align-justify u-custom-font u-text u-text-palette-3-light-2 u-text-8">The 19th Science Council of Asia Conference: Research and innovation for Sustainable Development in Asia, December&nbsp;3-5, 2019, Nay Pyi Taw.</p>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-image u-parallax u-section-16" id="sec-696c" data-image-width="960" data-image-height="1280">
+    <section class="skrollable u-align-center u-clearfix u-image u-section-16" id="sec-696c" data-image-width="960" data-image-height="1280">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h1 class="u-custom-font u-text u-text-white u-title u-text-1">Rider on elephent&nbsp;<br>
         </h1>
@@ -711,15 +711,14 @@
       </div>
     </section>
     <section class="u-clearfix u-palette-5-dark-3 u-section-19" id="contact">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-col">
               <div class="u-size-30">
                 <div class="u-layout-row">
-                  <div class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-right-cell u-size-60 u-layout-cell-1">
+                  <div class="u-align-center-lg u-align-center-md u-align-center-sm u-container-style u-layout-cell u-right-cell u-size-60 u-layout-cell-1">
                     <div class="u-container-layout u-container-layout-1">
-                      <h2 class="u-text u-text-default u-text-1">Let's Connect</h2>
                       <span class="u-icon u-icon-circle u-text-grey-40 u-icon-1">
                         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 512 512" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-d2c4"></use></svg>
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="svg-d2c4" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" class="u-svg-content"><g><g><path d="M467,61H45c-6.927,0-13.412,1.703-19.279,4.51L255,294.789l51.389-49.387c0,0,0.004-0.005,0.005-0.007    c0.001-0.002,0.005-0.004,0.005-0.004L486.286,65.514C480.418,62.705,473.929,61,467,61z"></path>
@@ -732,8 +731,8 @@
 </g>
 </g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>
                       </span>
-                      <h6 class="u-align-center-xl u-text u-text-default u-text-2">mail</h6>
-                      <p class="u-align-center-xl u-custom-font u-text u-text-3">tta94@victoriatheint.co.uk</p>
+                      <h6 class="u-align-center-xl u-align-center-xs u-text u-text-default u-text-1">mail</h6>
+                      <p class="u-align-center-xl u-align-center-xs u-custom-font u-text u-text-2">tta94@victoriatheint.co.uk</p>
                       <div class="u-social-icons u-spacing-16 u-text-grey-40 u-social-icons-1">
                         <a class="u-social-url" target="_blank" href="https://web.facebook.com/theintthawtar.htet">
                           <span class="u-icon u-icon-circle u-social-facebook u-social-type-color u-icon-2">
@@ -799,11 +798,11 @@
                     <div class="u-layout-col">
                       <div class="u-container-style u-layout-cell u-right-cell u-size-60 u-layout-cell-3">
                         <div class="u-container-layout u-container-layout-3">
-                          <h3 class="u-text u-text-default u-text-4">we are here</h3>
+                          <h3 class="u-text u-text-default u-text-3">we are here</h3>
                           <div class="u-clearfix u-custom-html u-custom-html-1">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.890122293782!2d94.85742811494852!3d21.156770585929227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30b5e5f0dc899f4b%3A0x1a080604d5f12087!2sChez%20Khin%20Ma%20Kyi!5e0!3m2!1smy!2smm!4v1594399847359!5m2!1smy!2smm" width="400" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                           </div>
-                          <h6 class="u-text u-text-default u-text-5">Mon-Fri 8:30am- 5pm / Phones are open 24/7</h6>
+                          <h6 class="u-text u-text-default u-text-4">Mon-Fri 8:30am- 5pm / Phones are open 24/7</h6>
                         </div>
                       </div>
                     </div>
@@ -861,7 +860,7 @@
         <span>Nicepage</span>
       </a>. 
     </section>
-    <span style="height: 64px; width: 64px; margin-left: 0; margin-right: auto; margin-top: 0; right: 185px; bottom: 20px; background-image: none;" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-text-palette-1-base" data-href="#">
+    <span style="height: 64px; width: 64px; margin-left: 0; margin-right: auto; margin-top: 0; right: 70px; bottom: 20px; background-image: none;" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-text-palette-1-base" data-href="#">
       <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 480.078 480.078" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-c474"></use></svg>
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 480.078 480.078" x="0px" y="0px" id="svg-c474" style="enable-background:new 0 0 480.078 480.078;"><linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="-26.7845" y1="555.7033" x2="-26.7845" y2="620.6473" gradientTransform="matrix(8 0 0 -8 454.3148 4941.7046)"><stop offset="0" style="stop-color:#006DF0"></stop><stop offset="1" style="stop-color:#00E7F0"></stop>
 </linearGradient><path style="fill:url(#SVGID_1_);" d="M477.834,234.422L245.754,2.342c-3.124-3.123-8.188-3.123-11.312,0L2.362,234.422  c-3.124,3.13-3.118,8.2,0.012,11.324s8.2,3.118,11.324-0.012l26.4-26.456v252.8c0,4.418,3.582,8,8,8h384c4.418,0,8-3.582,8-8v-252.8  l26.4,26.4c3.178,3.069,8.242,2.982,11.312-0.196c2.994-3.1,2.994-8.015,0-11.116L477.834,234.422z M424.098,464.078h-368v-260.8  l184-184l184,184V464.078z"></path><g><linearGradient id="SVGID_2_" gradientUnits="userSpaceOnUse" x1="-35.7771" y1="555.7033" x2="-35.7771" y2="620.6473" gradientTransform="matrix(8 0 0 -8 454.3148 4941.7046)"><stop offset="0" style="stop-color:#006DF0"></stop><stop offset="1" style="stop-color:#00E7F0"></stop>
