--- a/Sketches.html
+++ b/Sketches.html
@@ -56,12 +56,13 @@
 <meta name="robots" content="index, follow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="language" content="English">
-<meta name="revisit-after" content="3 days">
+<meta name="revisit-after" content="1 days">
 <meta name="author" content="Victoria Theint">
 </head>
   <body class="u-body">
     <section class="u-clearfix u-image u-section-1" id="carousel_fd60">
       <div class="u-clearfix u-sheet u-sheet-1">
+        <a href="Victoria-Theint.html" class="u-border-radius-6 u-btn u-btn-round u-button-style u-palette-5-light-2 u-btn-1">Back</a>
         <h3 class="u-custom-font u-text u-text-grey-90 u-text-1">Lacquer Art, Traditional line art, Ancient Mural style Painting</h3>
       </div>
     </section>
@@ -126,8 +127,6 @@
     <section class="u-clearfix u-lightbox u-section-3" id="sec-7d2a">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-custom-font u-text u-text-default u-text-1">sketches</h1>
-        <h2 class="u-text u-text-default u-text-2">Sample Headline</h2>
-        <h2 class="u-text u-text-default u-text-3">Sample Headline</h2>
         <div class="u-tabs u-tabs-1">
           <ul class="u-spacing-10 u-tab-list u-unstyled" role="tablist">
             <li class="u-tab-item" role="presentation">
@@ -263,11 +262,11 @@
       </div>
     </section>
     <section class="u-align-center u-clearfix u-section-4" id="sec-5ff9">
-      <div class="u-align-center u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-align-center u-clearfix u-sheet u-sheet-1">
         <p class="u-text u-text-1">
-          <a href="Victoria-Theint.html">Return to Main Page to see more Artworks</a>
+          <a href="Victoria-Theint.html">Visit Home&nbsp;Page to see more Artworks</a>
         </p>
-        <a href="Victoria-Theint.html" class="u-border-2 u-border-grey-dark-1 u-btn u-btn-rectangle u-button-style u-none u-btn-1">Main Page</a>
+        <a href="Victoria-Theint.html" class="u-border-2 u-border-grey-dark-1 u-btn u-btn-rectangle u-button-style u-none u-btn-1">HOME</a>
       </div>
     </section>
     
