--- a/Victoria-Theint.html
+++ b/Victoria-Theint.html
@@ -98,7 +98,7 @@
 <meta name="robots" content="index, follow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="language" content="English">
-<meta name="revisit-after" content="3 days">
+<meta name="revisit-after" content="1 days">
 <meta name="author" content="Victoria Theint">
 </head>
   <body class="u-body u-overlap u-overlap-contrast u-overlap-transparent u-white"><header class="u-clearfix u-custom-color-3 u-header u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xl u-header" id="header"><div class="u-black u-container-style u-expanded-width u-group u-opacity u-opacity-55 u-group-1" data-href="Victoria-Theint.html">
@@ -109,7 +109,7 @@
         </div>
       </div><nav class="u-align-left u-dropdown-icon u-menu u-menu-dropdown u-offcanvas u-menu-1">
         <div class="menu-collapse u-custom-font" style="font-family: Aclonica;">
-          <a class="u-button-style u-custom-text-active-color u-custom-text-hover-color u-nav-link u-text-palette-3-light-1" href="#Nyaung" style="padding: 7px 6px; font-size: calc(1em + 14px);">
+          <a class="u-button-style u-custom-text-active-color u-custom-text-hover-color u-nav-link u-text-palette-3-light-1" href="#NyaungYan-1" style="padding: 7px 6px; font-size: calc(1em + 14px);">
             <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 512 512" style="undefined"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-0f60"></use></svg>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-0f60"><g><path d="m117 395h124v-124h-124zm30-94h64v64h-64z"></path><path d="m117 241h124v-124h-124zm30-94h64v64h-64z"></path><path d="m271 395h124v-124h-124zm30-94h64v64h-64z"></path><path d="m271 241h124v-124h-124zm30-94h64v64h-64z"></path><path d="m256 0c-141.159 0-256 114.841-256 256s114.841 256 256 256 256-114.841 256-256-114.841-256-256-256zm0 482c-124.617 0-226-101.383-226-226s101.383-226 226-226 226 101.383 226 226-101.383 226-226 226z"></path>
 </g></svg>
@@ -118,7 +118,7 @@
         <div class="u-custom-menu u-nav-container">
           <ul class="u-custom-font u-nav u-text-palette-3-light-1 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-7 u-text-hover-custom-color-1 u-text-palette-3-light-1" href="Victoria-Theint.html" style="padding: 10px 20px;">HOME</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-7 u-text-hover-custom-color-1 u-text-palette-3-light-1" href="#Gallery" style="padding: 10px 20px;">WORKS</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="#NyaungYan">Nyaung Yan</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="#carousel_74da">Konbaung</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="#carousel_19e8">Konbaung</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="#Company">Company Art</a>
 </li></ul>
 </div>
@@ -136,7 +136,7 @@
             <div class="u-menu-close"></div>
             <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Victoria-Theint.html" style="padding: 10px 20px;">HOME</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#Gallery" style="padding: 10px 20px;">WORKS</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-5"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#NyaungYan">Nyaung Yan</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#carousel_74da">Konbaung</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#carousel_19e8">Konbaung</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#Company">Company Art</a>
 </li></ul>
 </div>
@@ -171,7 +171,7 @@
         </span>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-section-4" id="carousel_70d9">
+    <section class="u-align-center u-clearfix u-section-4" id="latestwork1">
       <div class="u-expanded-width u-gallery u-lightbox u-show-text-on-hover u-gallery-1">
         <div class="u-effect-fade u-gallery-item">
           <div class="u-back-slide u-back-slide-1" data-image-width="768" data-image-height="1024">
@@ -183,8 +183,8 @@
           </div>
         </div>
         <div class="u-effect-fade u-gallery-item">
-          <div class="u-back-slide u-back-slide-2" data-image-width="1280" data-image-height="960">
-            <img class="u-back-image u-expanded u-back-image-2" src="images/WhatsAppImage2020-06-23at14.03.58.jpeg">
+          <div class="u-back-slide u-back-slide-2" data-image-width="1200" data-image-height="1600">
+            <img class="u-back-image u-expanded u-back-image-2" src="images/tta110720.jpg">
           </div>
           <div class="u-over-slide u-shading u-over-slide-2">
             <h3 class="u-gallery-heading"></h3>
@@ -307,7 +307,7 @@
         <span class="sr-only">Next</span>
       </a>
     </section>
-    <section class="u-clearfix u-palette-5-dark-3 u-section-7" id="sec-c7af">
+    <section class="u-clearfix u-palette-5-dark-3 u-section-7" id="NyaungYan-1">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-gutter-30 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
@@ -386,16 +386,16 @@
     <section class="u-clearfix u-hidden-lg u-hidden-xl u-image u-section-11" id="sec-eb31" data-image-width="1808" data-image-height="1126">
       <div class="u-clearfix u-sheet u-sheet-1"></div>
     </section>
-    <section class="u-carousel u-carousel-duration-500 u-slide u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-block-5055-1" id="carousel_19e8" data-image-width="2700" data-image-height="1300" data-interval="5000" data-u-ride="carousel">
+    <section class="u-carousel u-carousel-duration-500 u-slide u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-block-5055-1" id="Konbaung1-1" data-image-width="2700" data-image-height="1300" data-interval="5000" data-u-ride="carousel">
       <ol class="u-absolute-hcenter-lg u-absolute-hcenter-md u-absolute-hcenter-sm u-absolute-hcenter-xl u-carousel-indicators u-block-5055-5">
-        <li data-u-target="#carousel_19e8" class="u-grey-30" data-u-slide-to="0"></li>
-        <li data-u-target="#carousel_19e8" class="u-grey-30" data-u-slide-to="1"></li>
-        <li data-u-target="#carousel_19e8" class="u-grey-30" data-u-slide-to="2"></li>
-        <li data-u-target="#carousel_19e8" class="u-grey-30" data-u-slide-to="3"></li>
-        <li data-u-target="#carousel_19e8" class="u-grey-30" data-u-slide-to="4"></li>
-        <li data-u-target="#carousel_19e8" class="u-grey-30" data-u-slide-to="5"></li>
-        <li data-u-target="#carousel_19e8" class="u-grey-30" data-u-slide-to="6"></li>
-        <li data-u-target="#carousel_19e8" class="u-grey-30" data-u-slide-to="7"></li>
+        <li data-u-target="#Konbaung1-1" class="u-grey-30" data-u-slide-to="0"></li>
+        <li data-u-target="#Konbaung1-1" class="u-grey-30" data-u-slide-to="1"></li>
+        <li data-u-target="#Konbaung1-1" class="u-grey-30" data-u-slide-to="2"></li>
+        <li data-u-target="#Konbaung1-1" class="u-grey-30" data-u-slide-to="3"></li>
+        <li data-u-target="#Konbaung1-1" class="u-grey-30" data-u-slide-to="4"></li>
+        <li data-u-target="#Konbaung1-1" class="u-grey-30" data-u-slide-to="5"></li>
+        <li data-u-target="#Konbaung1-1" class="u-grey-30" data-u-slide-to="6"></li>
+        <li data-u-target="#Konbaung1-1" class="u-grey-30" data-u-slide-to="7"></li>
       </ol>
       <div class="u-carousel-inner" role="listbox">
         <div class="skrollable u-active u-align-center u-carousel-item u-clearfix u-image u-parallax u-shading u-section-12-1" data-image-width="1600" data-image-height="770">
@@ -450,7 +450,7 @@
           </div>
         </div>
       </div>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-text-palette-5-dark-2 u-block-5055-3" href="#carousel_19e8" role="button" data-u-slide="prev">
+      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-text-palette-5-dark-2 u-block-5055-3" href="#Konbaung1-1" role="button" data-u-slide="prev">
         <span aria-hidden="true">
           <svg viewBox="0 0 477.175 477.175"><path d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225
 		c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z"></path></svg>
@@ -460,7 +460,7 @@
 		c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z"></path></svg>
         </span>
       </a>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-text-palette-5-dark-2 u-block-5055-4" href="#carousel_19e8" role="button" data-u-slide="next">
+      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-text-palette-5-dark-2 u-block-5055-4" href="#Konbaung1-1" role="button" data-u-slide="next">
         <span aria-hidden="true">
           <svg viewBox="0 0 477.175 477.175"><path d="M360.731,229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1l215.5,215.5l-215.5,215.5
 		c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4c3.4,0,6.9-1.3,9.5-4l225.1-225.1C365.931,242.875,365.931,234.275,360.731,229.075z"></path></svg>
@@ -558,7 +558,7 @@
         <p class="u-align-justify u-custom-font u-text u-text-palette-3-light-2 u-text-8">The 19th Science Council of Asia Conference: Research and innovation for Sustainable Development in Asia, December&nbsp;3-5, 2019, Nay Pyi Taw.</p>
       </div>
     </section>
-    <section class="skrollable u-align-center u-clearfix u-image u-section-16" id="sec-696c" data-image-width="960" data-image-height="1280">
+    <section class="skrollable u-align-center u-clearfix u-image u-section-16" id="rider" data-image-width="960" data-image-height="1280">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h1 class="u-custom-font u-text u-text-white u-title u-text-1">Rider on elephent&nbsp;<br>
         </h1>
@@ -595,8 +595,9 @@
         <span class="sr-only">Next</span>
       </a>
     </section>
-    <section class="u-clearfix u-grey-5 u-lightbox u-section-18" id="sec-13c6">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+    <section class="u-clearfix u-grey-5 u-lightbox u-section-18" id="sketch1">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <p class="u-align-center-xl u-align-center-xs u-custom-font u-text u-text-default u-text-1">See</p>
         <a href="Sketches.html" class="u-active-custom-color-1 u-border-radius-14 u-btn u-btn-round u-button-style u-custom-color-3 u-custom-font u-hover-palette-3-light-1 u-btn-1">SKETCHES</a>
       </div>
     </section>
@@ -605,8 +606,9 @@
         <div class="u-layout">
           <div class="u-layout-row">
             <div class="u-container-style u-layout-cell u-left-cell u-size-20 u-layout-cell-1">
-              <div class="u-container-layout u-valign-top u-container-layout-1">
-                <div class="u-form u-form-1">
+              <div class="u-container-layout u-container-layout-1">
+                <p class="u-align-center-xl u-align-center-xs u-custom-font u-text u-text-default u-text-1">Lest's get in touch</p>
+                <div class="u-expanded-width-xs u-form u-form-1">
                   <form action="#" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 0;" source="custom" name="form">
                     <div class="u-form-group u-form-name">
                       <label for="name-3d90" class="u-form-control-hidden u-label">Name</label>
@@ -645,7 +647,7 @@
 </g>
 </g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>
                 </span>
-                <p class="u-align-center-xl u-align-center-xs u-custom-font u-text u-text-1">tta94@victoriatheint.co.uk</p>
+                <p class="u-align-center-xl u-align-center-xs u-custom-font u-text u-text-2">tta94@victoriatheint.co.uk</p>
                 <div class="u-social-icons u-spacing-16 u-text-grey-40 u-social-icons-1">
                   <a class="u-social-url" target="_blank" href="https://web.facebook.com/theintthawtar.htet">
                     <span class="u-icon u-icon-circle u-social-facebook u-social-type-color u-icon-2">
@@ -685,7 +687,7 @@
     </section>
     
     
-    <footer class="u-clearfix u-footer u-grey-80" id="sec-f243"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+    <footer class="u-clearfix u-footer u-grey-80" id="footer"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <a href="http://victoriatheint.co.uk/" class="u-image u-logo u-image-1" title="Victoria Theint">
           <img src="images/logotta.png" class="u-logo-image u-logo-image-1" data-image-width="80">
         </a>
@@ -699,7 +701,7 @@
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#Home">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#carousel_1929">Works</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#Gallery">Works</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#Bio">Bio</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://baganlacquer.co.uk/">Lacquer Art</a>
 </li></ul>
@@ -708,7 +710,7 @@
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-menu-close"></div>
               <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#Home">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#carousel_1929">Works</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#Gallery">Works</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#Bio">Bio</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://baganlacquer.co.uk/">Lacquer Art</a>
 </li></ul>
@@ -717,7 +719,7 @@
           </div>
         </nav>
       </div></footer>
-    <span style="height: 64px; width: 64px; margin-left: 0; margin-right: auto; margin-top: 0; right: 70px; bottom: 20px; background-image: none;" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-text-palette-1-base" data-href="#">
+    <span style="height: 64px; width: 64px; margin-left: 0; margin-right: auto; margin-top: 0; right: 70px; bottom: 55px; background-image: none;" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-text-palette-1-base" data-href="#">
       <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 512.001 512.001" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-2c0f"></use></svg>
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512.001 512.001" x="0px" y="0px" id="svg-2c0f" style="enable-background:new 0 0 512.001 512.001;"><path style="fill:#76FFD9;" d="M366.984,503.565h19.768c15.581,0,28.211-12.631,28.211-28.211V36.645  c0-15.581-12.63-28.211-28.211-28.211H125.004c-15.581,0-28.211,12.631-28.211,28.211v438.708c0,15.581,12.631,28.211,28.211,28.211  h209.927"></path><polyline style="fill:#FFFFFF;" points="133.436,152.953 133.436,423.129 378.319,423.129 378.319,88.871 133.436,88.871   133.436,122.588 "></polyline><polygon style="fill:#FFC843;" points="255.877,160.266 174.464,256 213.642,256 213.642,351.734 298.114,351.734 298.114,256   337.291,256 "></polygon><path style="fill:#434C54;" d="M386.876,512h-19.769c-4.659,0-8.435-3.777-8.435-8.435c0-4.659,3.777-8.435,8.435-8.435h19.768  c10.904,0,19.776-8.872,19.776-19.776V36.646c0-10.904-8.872-19.776-19.776-19.776H125.126c-10.904,0-19.776,8.872-19.776,19.776  v438.708c0,10.904,8.872,19.776,19.776,19.776h209.927c4.659,0,8.435,3.777,8.435,8.435c0,4.659-3.777,8.435-8.435,8.435H125.126  c-20.207,0-36.646-16.44-36.646-36.646V36.646C88.481,16.44,104.921,0,125.126,0h261.748c20.207,0,36.646,16.44,36.646,36.646  v438.708C423.521,495.56,407.081,512,386.876,512z"></path><g><path style="fill:#00C395;" d="M303.237,55.109h-94.471c-4.659,0-8.435-3.777-8.435-8.435s3.777-8.435,8.435-8.435h94.471   c4.659,0,8.435,3.777,8.435,8.435S307.895,55.109,303.237,55.109z"></path><circle style="fill:#00C395;" cx="256.008" cy="465.046" r="8.435"></circle>
 </g></svg>
