--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="u-custom-menu u-nav-container">
           <ul class="u-custom-font u-nav u-text-palette-3-light-1 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-7 u-text-hover-custom-color-1 u-text-palette-3-light-1" href="Victoria-Theint.html" style="padding: 10px 20px;">HOME</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-7 u-text-hover-custom-color-1 u-text-palette-3-light-1" href="#Gallery" style="padding: 10px 20px;">WORKS</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="#NyaungYan">Nyaung Yan</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="#carousel_19e8">Konbaung</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="#Konbaung1-1">Konbaung</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="#Company">Company Art</a>
 </li></ul>
 </div>
@@ -136,7 +136,7 @@
             <div class="u-menu-close"></div>
             <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Victoria-Theint.html" style="padding: 10px 20px;">HOME</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#Gallery" style="padding: 10px 20px;">WORKS</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-5"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#NyaungYan">Nyaung Yan</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#carousel_19e8">Konbaung</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#Konbaung1-1">Konbaung</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#Company">Company Art</a>
 </li></ul>
 </div>
@@ -597,7 +597,7 @@
     </section>
     <section class="u-clearfix u-grey-5 u-lightbox u-section-18" id="sketch1">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-align-center-xl u-align-center-xs u-custom-font u-text u-text-default u-text-1">See</p>
+        <p class="u-align-center-xl u-align-center-xs u-custom-font u-text u-text-1">See</p>
         <a href="Sketches.html" class="u-active-custom-color-1 u-border-radius-14 u-btn u-btn-round u-button-style u-custom-color-3 u-custom-font u-hover-palette-3-light-1 u-btn-1">SKETCHES</a>
       </div>
     </section>
@@ -607,7 +607,7 @@
           <div class="u-layout-row">
             <div class="u-container-style u-layout-cell u-left-cell u-size-20 u-layout-cell-1">
               <div class="u-container-layout u-container-layout-1">
-                <p class="u-align-center-xl u-align-center-xs u-custom-font u-text u-text-default u-text-1">Lest's get in touch</p>
+                <p class="u-align-center-xl u-align-center-xs u-custom-font u-text u-text-default u-text-1">Let's get in touch</p>
                 <div class="u-expanded-width-xs u-form u-form-1">
                   <form action="#" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 0;" source="custom" name="form">
                     <div class="u-form-group u-form-name">
