--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Victoria Theint, Theint Theint Aung, Theint Aung, Theintthawtar, Lacquerware, Bagan lacquer, Bagan Lacquerware, Myanmar Lacquer, Myanmar Lacquerware, Asian Lacquer, Asian Lacquerware, Myanmar line art, Myanmar traditional Art, Burmese Lacquer, Burmese Lacquerware, lacquer art, Burmese line art, Burmese traditional art, burmese mural, Myanmar mural, Bagan mural, Myin Ka Bar, Bagan art, Burmese traditional art, Myanmar traditional art, Burmese traditional painting, Myanmar traditional painting, Myanmar line drawing, Ye Myat Lwin, Nyaung Oo, Bagan, Burmese Art, Chez Khin Ma Kyi, Myanmar traditional line art">
     <meta name="description" content=" Ancient Mural styles Painting, Myanmar Traditional line art, Lacquer Art">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>0</title>
+    <title>Victoria Theint</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Victoria-Theint.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -75,7 +75,7 @@
 		"url": "index.html",
 		"logo": "images/logotta.png"
 }</script>
-    <meta property="og:title" content="0">
+    <meta property="og:title" content="Victoria Theint">
     <meta property="og:type" content="website">
     <meta property="og:description" content=" Ancient Mural styles Painting, Myanmar Traditional line art, Lacquer Art">
     <meta name="theme-color" content="#1843b6">
